@@ -1,5 +1,6 @@
 package com.nhnacademy.bookapi.service.book.impl;
 
+import com.nhnacademy.bookapi.dto.book.*;
 import com.nhnacademy.bookapi.dto.book.BookDTO;
 import com.nhnacademy.bookapi.dto.bookcreator.BookCreatorResponseDTO;
 import com.nhnacademy.bookapi.dto.book.BookDetailResponseDTO;
@@ -9,6 +10,7 @@ import com.nhnacademy.bookapi.dto.book.SearchBookDetail;
 import com.nhnacademy.bookapi.dto.book.*;
 
 import com.nhnacademy.bookapi.dto.bookcreator.BookCreatorDetail;
+import com.nhnacademy.bookapi.dto.bookcreator.BookCreatorResponseDTO;
 import com.nhnacademy.bookapi.elasticsearch.repository.ElasticSearchBookSearchRepository;
 import com.nhnacademy.bookapi.entity.*;
 import com.nhnacademy.bookapi.exception.BookNotFoundException;
@@ -28,76 +30,31 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+
 @Transactional
 @Service
 @RequiredArgsConstructor
 public class BookServiceImpl implements BookService {
 
     private final BookRepository bookRepository;
-    private final BookCreatorRepository bookCreatorRepository;
-    private final BookIndexRepository bookIndexRepository;
-    private final BookIntroduceRepository bookIntroduceRepository;
-    private final CategoryRepository categoryRepository;
-    private final BookCategoryRepository bookCategoryRepository;
-    private final BookImageRepository bookImageRepository;
-    private final ImageRepository imageRepository;
-    private final BookCreatorMapRepository bookCreatorMapRepository;
-    private final PublisherRepository publisherRepository;
     private final BookCoverImageRepository bookCoverImageRepository;
-    private final ElasticSearchBookSearchRepository elasticSearchBookSearchRepository;
-    private final BookCreatorService bookCreatorService;
+    private final BookCreatorMapRepository bookCreatorMapRepository;
+    private final BookCategoryRepository bookCategoryRepository;
     private final BookTagRepository bookTagRepository;
+    private final BookIndexRepository bookIndexRepository;
     private final BookTypeRepository bookTypeRepository;
-
-    private final EntityManager em;
-
-    @Override
-    public CreateBookRequestDTO createBook(CreateBookRequestDTO createBookRequest) {
-        Book book = new Book();
-        book.create(createBookRequest.getTitle(), createBookRequest.getDescription(), createBookRequest.getPublicationDate(), createBookRequest.getRegularPrice()
-                , createBookRequest.getSalePrice(), createBookRequest.getIsbn(), createBookRequest.getStock(), createBookRequest.getPages(), null);
-        book = bookRepository.save(book);
-        //이미지 저장
-        String imageUrl = createBookRequest.getImageUrl();
-
-        Image image = new Image(imageUrl);
-        image = imageRepository.save(image);
-        BookCoverImage bookCoverImage = new BookCoverImage(image, book);
-        bookCoverImageRepository.save(bookCoverImage);
-
-        //출판사저장
-        String publisher = createBookRequest.getPublisher();
-
-
-        Publisher existsPublisher = publisherRepository.findByName(publisher);
-
-        if (existsPublisher == null) {
-            Publisher newPub = new Publisher(createBookRequest.getPublisher());
-            book.publisherUpdate(newPub);
-        } else {
-            book.publisherUpdate(existsPublisher);
-        }
-        // 작가저장
-        String author = createBookRequest.getAuthor();
-
-        BookCreator bookCreator = new BookCreator(author, Role.AUTHOR);
-
-        bookCreatorRepository.save(bookCreator);
-
-        BookCreatorMap bookCreatorMap = new BookCreatorMap(book, bookCreator);
-
-        bookCreatorMapRepository.save(bookCreatorMap);
-
-        return createBookRequest;
-    }
+    private final BookImageRepository bookImageRepository;
+    private final BookCreatorService bookCreatorService;
 
     @Override
     public Book createBook(Book book) {
         return bookRepository.save(book);
     }
-
-
-
 
     @Override
     public void deleteBook(Long id) {
@@ -115,6 +72,7 @@ public class BookServiceImpl implements BookService {
         }
         return bookCreatorDetails;
     }
+
     @Transactional(readOnly = true)
     @Override
     public SearchBookDetail searchBookDetailByBookId(Long id) {
@@ -164,6 +122,7 @@ public class BookServiceImpl implements BookService {
         }
         return detailImages;
     }
+
     private StringBuilder getBookTypes(List<BookType> bookTypes) {
         StringBuilder types = new StringBuilder();
         for (BookType bookType : bookTypes) {
@@ -251,7 +210,6 @@ public class BookServiceImpl implements BookService {
 //            categories, keyword, pageable);
 //    }
 
-
     public Page<BookDetailResponseDTO> getCategorySearchBooks(List<String> categories, String keyword, Pageable pageable) {
         return bookRepository.findByCategoryAndTitle(
                 categories, keyword, pageable);
@@ -283,7 +241,7 @@ public class BookServiceImpl implements BookService {
 
 
     public Book getBook(Long id) {
-        return bookRepository.findById(id).get();
+        return bookRepository.findById(id).orElse(null);
     }
 
 
@@ -292,10 +250,39 @@ public class BookServiceImpl implements BookService {
     public List<BookSearchDTO> searchBooksByName(String query) {
         List<Book> books = bookRepository.findByTitleContaining(query);
         return books.stream()
-                .map(book -> new BookSearchDTO(book.getId(), book.getTitle(), book.getIsbn13()))
-                .collect(Collectors.toList());
+                .map(book -> new BookSearchDTO(book.getId(), book.getTitle(), book.getIsbn13())).toList();
     }
 
+    @Override
+    public Page<BookDetailResponseDTO> searchBookByCategoryId(Long categoryId, Pageable pageable) {
+        return bookRepository.findByCategoryId(categoryId, pageable);
+    }
 
+    @Override
+    public List<CartItemDTO> getCartItemsByIds(List<Long> bookIds) {
+        List<Book> books = bookRepository.findAllById(bookIds);
+        List<CartItemDTO> cartItemDTOS = new ArrayList<>();
+        for (Book book : books) {
+            cartItemDTOS.add(new CartItemDTO(
+                    book.getId(),
+                    book.getStock(),
+                    book.getSalePrice(),
+                    book.getRegularPrice()));
+        }
+        return cartItemDTOS;
+    }
+
+    @Override
+    public String getBookName(Long bookId) {
+        Optional<Book> bookOptional = bookRepository.findById(bookId);
+
+        if(bookOptional.isEmpty()){
+            throw new BookNotFoundException("book not found");
+        }
+
+        Book book = bookOptional.get();
+
+        return book.getTitle();
+    }
 
 }
